@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-18T00:26:27Z",
-  "count_outdated" : 342,
-  "uniques_outdated" : 66,
+  "timestamp" : "2022-05-20T00:27:46Z",
+  "count_outdated" : 343,
+  "uniques_outdated" : 67,
   "count" : 383,
   "uniques" : 80,
   "views" : [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
