@@ -1,12 +1,7 @@
 {
-  "count": 41,
+  "count": 40,
   "uniques": 11,
   "views": [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
