@@ -1,3 +1,10 @@
+2022-05-20T00:27:46Z:
+* notice: last 14d: unq all: 11 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 66 342 / 80 383
+* notice: next accum: outdated-unq outdated-all / unq all: 67 343 / 80 383
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-18T00:26:27Z:
 * notice: last 14d: all unq: 41 11
 * notice: prev accum: outdated-all outdated-unq / all unq: 327 63 / 375 78
